[gd_scene load_steps=23 format=1]

[ext_resource path="res://Enemies/Beowulf/Beowulf.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Beowulf/Beowulf_00000.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Beowulf/Beowulf_00001.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Beowulf/Beowulf_00002.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Beowulf/Beowulf_00008.png" type="Texture" id=5]
[ext_resource path="res://Enemies/Beowulf/Beowulf_00003.png" type="Texture" id=6]
[ext_resource path="res://Enemies/Beowulf/Beowulf_00004.png" type="Texture" id=7]
[ext_resource path="res://Enemies/Beowulf/Beowulf_00005.png" type="Texture" id=8]
[ext_resource path="res://Enemies/Beowulf/Beowulf_00006.png" type="Texture" id=9]
[ext_resource path="res://Enemies/Beowulf/Beowulf_00007.png" type="Texture" id=10]
[ext_resource path="res://Enemies/Beowulf/Beowulf_00009.png" type="Texture" id=11]
[ext_resource path="res://Enemies/Beowulf/Beowulf_00010.png" type="Texture" id=12]
[ext_resource path="res://Enemies/Beowulf/Beowulf_00011.png" type="Texture" id=13]
[ext_resource path="res://Enemies/Beowulf/Beowulf_00012.png" type="Texture" id=14]
[ext_resource path="res://Enemies/Beowulf/Beowulf_00013.png" type="Texture" id=15]
[ext_resource path="res://Enemies/Beowulf/Beowulf_00014.png" type="Texture" id=16]
[ext_resource path="res://Enemies/Beowulf/Beowulf_00015.png" type="Texture" id=17]
[ext_resource path="res://Enemies/Beowulf/Beowulf_00016.png" type="Texture" id=18]
[ext_resource path="res://Enemies/Beowulf/Beowulf_00017.png" type="Texture" id=19]
[ext_resource path="res://Enemies/Beowulf/Beowulf_00018.png" type="Texture" id=20]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "point",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "stomp",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 59.0192, 107.027 )

[node name="Beowulf" type="KinematicBody2D" groups=[
"enemy",
]]

input/pickable = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Sprites" type="AnimatedSprite" parent="."]

frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="HurtTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = false

[node name="BlinkTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="DespawnTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="StaticBody2D" type="StaticBody2D" parent="." groups=[
"enemy",
]]

input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 59.0002, 18 )
shapes/0/trigger = false
collision/layers = 3
collision/mask = 3
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]

transform/pos = Vector2( 59.0002, 18 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0


